syntax = "proto3";

option java_package = "disco.foundation.discoprotocol";
option java_multiple_files = true;

message ProtoDiscoEvent {
  string publicKey = 1;
  string name = 2;
}
